Fix activity buttons on mobile

--- a/src/pages/MovieDetails/Overview/Overview.module.scss
+++ b/src/pages/MovieDetails/Overview/Overview.module.scss
@@ -17,12 +17,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-  }
-
-  &__activityWrapper {
-    display: flex;
-    align-items: center;
     gap: 20px;
+    width: 100%;
   }
 
   @media screen and (min-width: $md) {
